components/observability/holmesgpt/holmesgpt.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: holmesgpt
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
